# zero_elabviewer

./: .gitignore  CMakeLists.txt  README.md  deb_package_howto.txt  doxygen.conf  zero_elabviewer.pro
.github/workflows/: ci-ubuntu.yml  ci-win.yml  ci-winxp.yml  debug.yml
cmake/: FindFFTW.cmake  PackageTools.cmake
data/: com.github.cvut-fel-sdi.zero-elabviewer.metainfo.xml.in  com.github.sdi-hackers.zero-elabviewer-community.metainfo.xml.in  desktop.in  example_script.js  resources.rc
data/icons/: bake.sh  svg2icns.sh  zero-elabviewer-community.icns
data/icons/baked/: zero-elabviewer-community.icns
debian/: control
extras/launcher/: zero_elabviewer.desktop
extras/packaging/: add-to-changelog.sh
extras/packaging/_tools/: add-to-changelog.sh
extras/packaging/appimage/: appimage.yml.in
extras/packaging/deb/: dsc.in
extras/packaging/deb/debian/: changelog  control.in  copyright  lintian-overrides
extras/packaging/rpm/: spec.in
extras/udev/: 71-zero-elabviewer.rules
resources/: about.html  resources.qrc
resources/help/: help.html  help_cs.html  help_targets.html
src/: AboutWindow.cpp  AboutWindow.h  Application.cpp  Application.h  HelpWindow.cpp  HelpWindow.h  main.cpp
src/DataUtils/: DataAveraging.h  DataConverter.cpp  DataConverter.h  DataSet.cpp  DataSet.h  LiveJSScript.cpp  LiveJSScript.h  Protocol.cpp  Protocol.h  SignalMeasurement.cpp  SignalMeasurement.h  SpectralAnalysis.cpp  SpectralAnalysis.h
src/FunctionWidgets/: GeneratorWidget.cpp  GeneratorWidget.h  PWMInputWidget.cpp  PWMInputWidget.h  PWMWidget.cpp  PWMWidget.h  PulseCounterWidget.cpp  PulseCounterWidget.h  ScopeWidget.cpp  ScopeWidget.h  VoltmeterWidget.cpp  VoltmeterWidget.h
src/HelperWidgets/: ChannelControl.cpp  ChannelControl.h  ExtendedPlot.cpp  ExtendedPlot.h  FrequencyControl.cpp  FrequencyControl.h  RangeControl.cpp  RangeControl.h  RecordWidget.cpp  RecordWidget.h  ResponseMeasurement.cpp  ResponseMeasurement.h  RunningIcon.cpp  RunningIcon.h  SliderControl.cpp  SliderControl.h  SpectralAnalysisWidget.cpp  SpectralAnalysisWidget.h  StatusWidget.cpp  StatusWidget.h
